@@ -7,16 +7,8 @@ SUBDIRS =			\
 
 EXTRA_DIST =			\
 	pycheckrc		\
-	intltool-extract.in	\
-	intltool-merge.in	\
-	intltool-update.in	\
 	sabayon.schema		\
 	ISSUES
-
-DISTCLEANFILES =		\
-	intltool-extract	\
-	intltool-merge		\
-	intltool-update
 
 pycheck:
 	(cd lib; make pycheck) 
