@@ -20,7 +20,7 @@ AC_HEADER_STDC
 
 AM_PROG_LIBTOOL
 AM_PATH_PYTHON
-IT_PROG_INTLTOOL([0.35.0])
+IT_PROG_INTLTOOL([0.40.0])
 AC_PROG_LN_S
 
 GNOME_COMPILE_WARNINGS(yes)
