@@ -1,5 +1,10 @@
 2008-09-23  Vincent Untz  <vuntz@gnome.org>
 
+	* Makefile.am: remove old intltool cruft
+	* configure.ac: require intltool 0.40.0
+
+2008-09-23  Vincent Untz  <vuntz@gnome.org>
+
 	* configure.in: post-release bump to 2.22.2.
 
 ==================== 2.22.1 ====================
